# Material-Stream-Identification-System

./: .gitignore  README.md  api_server.py  features_val.npz  inference.py  pyproject.toml  run_inference_single_img.py  run_inference_single_img_svm.py  test.py
android_jetpack_project/: .gitignore  README.md  settings.gradle.kts  setup_models.py  setup_python_modules.py
android_jetpack_project/app/: build.gradle.kts  proguard-rules.pro
android_jetpack_project/app/src/main/: AndroidManifest.xml
android_jetpack_project/app/src/main/java/com/materialclassification/: MainActivity.kt
android_jetpack_project/app/src/main/python/: classifier_wrapper.py  feature_extractor_wrapper.py
android_jetpack_project/app/src/main/python/classifiers/: KNN.py
android_jetpack_project/app/src/main/python/vector_extraction/: class_balancing.py  deep_feature_extractor.py  feature_extractor_v2_core.py  feature_extractor_v2_dataset.py  feature_extractor_v2_sanity.py  parallel_processing.py
android_jetpack_project/app/src/main/res/values/: strings.xml  themes.xml
android_jetpack_project/gradle/wrapper/: gradle-wrapper.properties
classifiers/: KNN.py  SVM.py  parallel_training.py
standalone_scripts/: clean_corrupted_data.py  features_train.npz  features_val.npz  run_feature_extractor_v2_dataset.py
vector_extraction/: augmentation.py  deep_feature_extractor.py  feature_extractor.py  feature_extractor_v2.py  feature_extractor_v2_config.py  feature_extractor_v2_dataset.py
vector_extraction/features/: color.py  preprocess.py
(+12 files in other folders)
